# web-research-automation-agent

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
research_agent/: .env.example  README.md  agent.py  config.py  llm.py  main.py  prompts.py  pyproject.toml  requirements.txt  search.py
research_agent/.github/workflows/: ci.yml
research_agent/research_agent/: __init__.py  search.py
research_agent/tests/: test_config.py  test_llm.py  test_search.py
tests/: test_agent.py
