[project]
name = "research-agent"
version = "1.0.0"
description = "A command-line agent that plans, searches, and synthesizes cited research reports."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "groq>=0.9.0",
    "google-generativeai>=0.7",
    "ddgs>=6.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
research-agent = "main:main"

[tool.setuptools]
# main.py is a loose top-level module (not a package), so it needs to be
# listed explicitly — setuptools' auto-discovery only finds directories
# with an __init__.py, which is also why "packages.find" below is scoped
# to research_agent*: left to its defaults it would also pick up tests/
# (which has its own __init__.py) and ship it inside the built package.
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["research_agent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = isort, B = bugbear, UP = pyupgrade
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # line length handled by formatter, not linter

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
